# OpSysProj

docs/: README.txt
src/: CMakeLists.txt  fcfs.cpp  fcfs.h  main  main.cpp  p1.out  part2_check.txt  part2_check_EXAMPLE.txt  process.h  rng.h  rr.cpp  rr.h  simout.txt  sjf.cpp  sjf.h  srt.cpp  srt.h  student1.txt
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
